# talk-it-out

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  index.html  main.go  main.py  pyproject.toml
src/: handler.rs  main.rs  readability_parser.rs  reader.rs  tts.rs
