[package]
name = "talk-it-out"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
readability-js = "0.1.5"
reqwest = "0.13.4"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
