[project]
name = "talk-it-out"
version = "0.1.0"
description = "Turn any page into an audio stream"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "kokoro-onnx>=0.3.9",
    "lameenc>=1.8.2",
    "quart>=0.20.0",
    "readabilipy>=0.3.0",
    "uvicorn>=0.49.0",
]
